Contenteditable should have EditText class name

On some platforms, a simple text field, and a
contenteditable region of the page are handled
differently, so we don't explicitly have a role for
the root of a contenteditable region.

On Android, TalkBack won't recognize it as a
text field if it doesn't have the correct class
name, so set the class name appropriately for
contenteditable too so that Android will treat
it as a text field.

Bug: 614907

Change-Id: Ib923452a17604a3dd0a79030ae1fec64dd71f995
Reviewed-on: https://chromium-review.googlesource.com/c/1388387
Reviewed-by: Paul Miller <paulmiller@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618812}
Former-commit-id: 8ce6de372855256486dc7feb8bf68a73291d293d